# rtmp-vcam

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES
crates/rtmp-server/: Cargo.toml
crates/rtmp-server/src/: flv.rs  handshake.rs  lib.rs  server.rs  session.rs
crates/rtmp-vcam-app/: Cargo.toml
crates/rtmp-vcam-app/src/: ipc.rs  main.rs
crates/video-pipeline/: Cargo.toml
crates/video-pipeline/src/: decoder.rs  ffi.rs  format.rs  lib.rs  surface_pool.rs
scripts/: generate-icon.py  make-dmg.sh  release.sh
swift/CameraExtension/CameraExtension.xcodeproj/: project.pbxproj
swift/CameraExtension/CameraExtension.xcodeproj/xcshareddata/xcschemes/: CameraExtension.xcscheme
swift/CameraExtension/Entitlements/: Extension.entitlements
swift/CameraExtension/Extension/: Device.swift  Info.plist  Provider.swift  Stream.swift  main.swift  shm_shim.h
swift/CameraExtension/HostApp/: AppDelegate.swift  Info.plist  main.swift
